# parallax

./: .gitignore
.github/workflows/: build.yml
app/Parallax/: Package.swift  ParallaxApp.swift
app/Parallax/Models/: Models.swift
app/Parallax/Services/: DaemonConnection.swift  DaemonProtocol.swift  DaemonService.swift
app/Parallax/ViewModels/: SessionViewModel.swift
app/Parallax/Views/Review/: ReviewView.swift
app/Parallax/Views/Session/: SessionListView.swift  SessionView.swift
app/Parallax/Views/Settings/: SettingsView.swift
app/Parallax/Views/Sidebar/: AddProjectSheet.swift  CreateWorktreeSheet.swift  SidebarView.swift
app/Parallax/Views/Terminal/: TerminalView.swift
daemon/: Cargo.toml
daemon/sql/: 001_projects_worktrees.sql  002_sessions.sql  003_comments.sql  004_events.sql  005_agent_configs.sql
daemon/src/: config.rs  event_log.rs  git.rs  main.rs
daemon/src/acp/: client_handler.rs  manager.rs  mod.rs  session_bridge.rs
daemon/src/acp/agents/: claude_code.rs  cursor.rs  mod.rs
daemon/src/db/: migrations.rs  mod.rs  models.rs  queries.rs
daemon/src/domain/: comment.rs  mod.rs  prescript.rs  project.rs  session.rs  terminal.rs  worktree.rs
daemon/src/ipc/: connection.rs  mod.rs  protocol.rs  server.rs  types.rs
scripts/: build-daemon.sh  bundle-app.sh  dev.sh  test-acp.py
