[package]
name = "parallax-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parallax-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
agent-client-protocol = "0.10"
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
